force-app/main/default/objects/cgcloud__Account_Plan_Category__c/cgcloud__Account_Plan_Category__c.object-meta.xml
<CustomObject>
    <description>Categories of the account plan including the manual inputs.
Categories can be assigned to an account plan. A category can only be assigned to one account/Business year combination.</description>
    <label>CBP Category</label>
    <nameField>
        <displayFormat>APC-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBP Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>