force-app/main/default/objects/cgcloud__Account_Plan_Category__c/fields/cgcloud__Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Plan__c</fullName>
    <label>Customer Business Plan</label>
    <referenceTo>cgcloud__Account_Plan__c</referenceTo>
    <relationshipName>Account_Plan_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>