force-app/main/default/objects/cgcloud__Account_Plan_Category__c/fields/cgcloud__Category__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.cgcloud__Product_Level__c</field>
            <operation>equals</operation>
            <value>Category</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Account_Plan_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>