force-app/main/default/objects/cgcloud__Account_Plan_Category__c/fields/cgcloud__Manual_Calculation_Input_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manual_Calculation_Input_2__c</fullName>
    <label>Manual Calculation Input 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>