force-app/main/default/objects/cgcloud__Account_Plan_Category__c/fields/cgcloud__Manual_Inputs_OffCore_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manual_Inputs_OffCore_Id__c</fullName>
    <description>Holds the current Manual Inputs OffCore Id for OffCore Manual Inputs.</description>
    <inlineHelpText>Holds the current Manual Inputs OffCore Id for OffCore Manual Inputs.</inlineHelpText>
    <label>Manual_Inputs_OffCore_Id__c</label>
    <length>36</length>
    <type>Text</type>
</CustomField>