force-app/main/default/objects/cgcloud__Account_Plan_Category__c/fields/cgcloud__Uniqueness_Check__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Uniqueness_Check__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Combination of AccountPlan.Account, AccountPlan.BusinessYear and Category to check for uniqueness</description>
    <label>Uniqueness Check</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>