force-app/main/default/objects/cgcloud__Account_Plan_Category__c/fields/cgcloud__Version__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Version__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>