force-app/main/default/objects/cgcloud__Account_Plan_Category__c/validationRules/cgcloud__Category_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Category_Only</fullName>
    <active>true</active>
    <description>Customer Business Plan Category must be a Product of level &quot;Category&quot;</description>
    <errorConditionFormula>TEXT(cgcloud__Category__r.cgcloud__Product_Level__c) &lt;&gt; &apos;Category&apos;</errorConditionFormula>
    <errorMessage>Customer Business Plan Category must be a Product of level &quot;Category&quot;</errorMessage>
</ValidationRule>