force-app/main/default/objects/cgcloud__Account_Plan_Category__c/validationRules/cgcloud__Prevent_Category_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Prevent_Category_Change</fullName>
    <active>true</active>
    <description>The Category can&apos;t be edited after CBP Category creation.</description>
    <errorConditionFormula>ISCHANGED(cgcloud__Category__c)</errorConditionFormula>
    <errorMessage>The Category can&apos;t be edited after CBP Category creation.</errorMessage>
</ValidationRule>