force-app/main/default/objects/cgcloud__Account_Plan_Category__c/validationRules/cgcloud__Sales_Org_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_Mismatch</fullName>
    <active>true</active>
    <description>The Category and the Customer Business Plan must have the same Sales Org</description>
    <errorConditionFormula>cgcloud__Account_Plan__r.cgcloud__Sales_Org__c &lt;&gt; cgcloud__Category__r.cgcloud__Sales_Org__c</errorConditionFormula>
    <errorMessage>The Category and the Customer Business Plan must have the same Sales Org</errorMessage>
</ValidationRule>